--- a/lib/localization/app_es.arb
+++ b/lib/localization/app_es.arb
@@ -131,5 +131,8 @@
   "otherReview": "Otra reseña",
   "downloadDappToReview": "Algo salió mal, ¿no descargaste/abriste la dApp antes de publicar la reseña?",
   "reviewPosted": "Reseña publicada.",
-  "ratingsAndReviews": "Calificaciones y reseñas"
+  "ratingsAndReviews": "Calificaciones y reseñas",
+  "allowAppInstall": "Permitir permiso de instalación",
+  "allowAppInstallDesc": "Permitir que dappstore instale aplicaciones en este dispositivo",
+  "goToSettings": "Ir a ajustes"
 }
