--- a/lib/localization/app_pl.arb
+++ b/lib/localization/app_pl.arb
@@ -131,5 +131,8 @@
   "otherReview": "Inna recenzja",
   "downloadDappToReview": "Coś poszło nie tak, czy nie pobrałeś/otworzyłeś dApp przed napisaniem recenzji?",
   "reviewPosted": "Recenzja opublikowana.",
-  "ratingsAndReviews": "Oceny i recenzje"
+  "ratingsAndReviews": "Oceny i recenzje",
+  "allowAppInstall": "Zezwól na zgodę na instalację",
+  "allowAppInstallDesc": "Zezwól dappstore na instalowanie aplikacji na tym urządzeniu",
+  "goToSettings": "Przejdź do ustawień"
 }
