added permission for notification

--- a/lib/localization/app_de.arb
+++ b/lib/localization/app_de.arb
@@ -134,5 +134,7 @@
   "ratingsAndReviews": "Bewertungen und Rezensionen",
   "allowAppInstall": "Installationsberechtigung erlauben",
   "allowAppInstallDesc": "Erlaube dappstore, Apps auf diesem Gerät zu installieren",
+  "allowAppNotification": "Benachrichtigungsberechtigung erlauben",
+  "allowAppNotificationDesc": "Erlaube dappstore, Benachrichtigungen auf diesem Gerät zu senden",
   "goToSettings": "Zu den Einstellungen gehen"
 }
