--- a/lib/localization/app_fr.arb
+++ b/lib/localization/app_fr.arb
@@ -134,5 +134,7 @@
   "ratingsAndReviews": "Évaluations et avis",
   "allowAppInstall": "Autoriser la permission d'installation",
   "allowAppInstallDesc": "Autoriser dappstore à installer des applications sur cet appareil",
+  "allowAppNotification": "Autoriser la permission de notifications",
+  "allowAppNotificationDesc": "Autoriser dappstore à envoyer des notifications sur cet appareil",
   "goToSettings": "Aller aux paramètres"
 }
