--- a/lib/localization/app_pl.arb
+++ b/lib/localization/app_pl.arb
@@ -134,5 +134,7 @@
   "ratingsAndReviews": "Oceny i recenzje",
   "allowAppInstall": "Zezwól na zgodę na instalację",
   "allowAppInstallDesc": "Zezwól dappstore na instalowanie aplikacji na tym urządzeniu",
+  "allowAppNotification": "Zezwól na zgodę na powiadomienia",
+  "allowAppNotificationDesc": "Zezwól dappstore na wysyłanie powiadomień na tym urządzeniu",
   "goToSettings": "Przejdź do ustawień"
 }
