--- a/lib/localization/app_zh.arb
+++ b/lib/localization/app_zh.arb
@@ -134,5 +134,7 @@
   "ratingsAndReviews": "评分和评论",
    "allowAppInstall": "允许安装权限",
   "allowAppInstallDesc": "允许dappstore在此设备上安装应用程序",
+  "allowAppNotification": "允许通知权限",
+  "allowAppNotificationDesc": "允许dappstore在此设备上发送通知",
   "goToSettings": "前往设置"
 }
