--- a/lib/localization/app_de.arb
+++ b/lib/localization/app_de.arb
@@ -128,7 +128,7 @@
   "shareReview": "Bewertung teilen",
   "yourReview": "Ihre Bewertung",
   "editReview": "Bewertung bearbeiten",
-  "otherReview": "Andere Bewertung",
+  "allReviews": "Alle Bewertungen",
   "downloadDappToReview": "Etwas ist schief gelaufen. Hast du die dApp nicht heruntergeladen/geöffnet, bevor du eine Bewertung abgegeben hast?",
   "reviewPosted": "Bewertung veröffentlicht.",
   "ratingsAndReviews": "Bewertungen und Rezensionen",
