--- a/lib/localization/app_es.arb
+++ b/lib/localization/app_es.arb
@@ -128,7 +128,7 @@
   "shareReview": "Compartir reseña",
   "yourReview": "Tu reseña",
   "editReview": "Editar reseña",
-  "otherReview": "Otra reseña",
+  "allReviews": "Todas las reseñas",
   "downloadDappToReview": "Algo salió mal, ¿no descargaste/abriste la dApp antes de publicar la reseña?",
   "reviewPosted": "Reseña publicada.",
   "ratingsAndReviews": "Calificaciones y reseñas",
