--- a/lib/localization/app_fr.arb
+++ b/lib/localization/app_fr.arb
@@ -128,7 +128,7 @@
   "shareReview": "Partager un avis",
   "yourReview": "Votre avis",
   "editReview": "Modifier l'avis",
-  "otherReview": "Autre avis",
+  "allReviews": "Toutes les critiques",
   "downloadDappToReview": "Quelque chose s'est mal passé, n'avez-vous pas téléchargé/ouvert la dApp avant de publier un avis ?",
   "reviewPosted": "Avis publié.",
   "ratingsAndReviews": "Évaluations et avis",
