--- a/lib/localization/app_it.arb
+++ b/lib/localization/app_it.arb
@@ -128,7 +128,7 @@
   "shareReview": "Condividi recensione",
   "yourReview": "La tua recensione",
   "editReview": "Modifica recensione",
-  "otherReview": "Altra recensione",
+  "allReviews": "Tutte le recensioni",
   "downloadDappToReview": "Qualcosa è andato storto, non hai scaricato/aperto la dApp prima di pubblicare la recensione?",
   "reviewPosted": "Recensione pubblicata.",
   "ratingsAndReviews": "Valutazioni e recensioni",
