--- a/lib/localization/app_ko.arb
+++ b/lib/localization/app_ko.arb
@@ -128,7 +128,7 @@
   "shareReview": "리뷰 공유",
   "yourReview": "리뷰 작성",
   "editReview": "리뷰 편집",
-  "otherReview": "다른 리뷰",
+  "allReviews": "모든 리뷰",
   "downloadDappToReview": "문제가 발생했습니다. 리뷰를 게시하기 전에 dApp을 다운로드/열지 않으셨나요?",
   "reviewPosted": "리뷰가 게시되었습니다.",
   "ratingsAndReviews": "평가 및 리뷰",
