--- a/lib/localization/app_pl.arb
+++ b/lib/localization/app_pl.arb
@@ -128,7 +128,7 @@
   "shareReview": "Udostępnij recenzję",
   "yourReview": "Twoja recenzja",
   "editReview": "Edytuj recenzję",
-  "otherReview": "Inna recenzja",
+  "allReviews": "Wszystkie opinie",
   "downloadDappToReview": "Coś poszło nie tak, czy nie pobrałeś/otworzyłeś dApp przed napisaniem recenzji?",
   "reviewPosted": "Recenzja opublikowana.",
   "ratingsAndReviews": "Oceny i recenzje",
