--- a/lib/localization/app_ru.arb
+++ b/lib/localization/app_ru.arb
@@ -128,7 +128,7 @@
   "shareReview": "Поделиться отзывом",
   "yourReview": "Ваш отзыв",
   "editReview": "Изменить отзыв",
-  "otherReview": "Другой обзор",
+  "allReviews": "Все отзывы",
   "downloadDappToReview": "Что-то пошло не так. Вы не загружали/не открывали dApp перед тем, как оставить отзыв?",
   "reviewPosted": "Отзыв опубликован.",
   "ratingsAndReviews": "Рейтинги и отзывы",
