--- a/lib/localization/app_zh.arb
+++ b/lib/localization/app_zh.arb
@@ -128,11 +128,11 @@
   "shareReview": "分享评价",
   "yourReview": "您的评价",
   "editReview": "编辑评价",
-  "otherReview": "其他评论",
+  "allReviews": "所有评论",
   "downloadDappToReview": "出了点问题，您在发布评论前是否没有下载/打开dApp？",
   "reviewPosted": "评论已发布。",
   "ratingsAndReviews": "评分和评论",
-   "allowAppInstall": "允许安装权限",
+  "allowAppInstall": "允许安装权限",
   "allowAppInstallDesc": "允许dappstore在此设备上安装应用程序",
   "allowAppNotification": "允许通知权限",
   "allowAppNotificationDesc": "允许dappstore在此设备上发送通知",
