--- a/lib/localization/app_ja.arb
+++ b/lib/localization/app_ja.arb
@@ -128,13 +128,12 @@
   "shareReview": "レビューを共有する",
   "yourReview": "あなたのレビュー",
   "editReview": "レビューを編集する",
-  "otherReview": "他のレビュー",
+  "allReviews": "すべてのレビュー",
   "downloadDappToReview": "何かがうまくいかなかったですね。レビューを投稿する前に、dAppをダウンロード/開いていないのではありませんか？",
   "reviewPosted": "レビューが投稿されました。",
   "ratingsAndReviews": "評価とレビュー",
   "allowAppInstall": "インストールの許可",
   "allowAppInstallDesc": "このデバイスに対してdappstoreにアプリのインストールを許可する",
-  
   "allowAppNotification": "通知の許可",
   "allowAppNotificationDesc": "このデバイスに対してdappstoreが通知を送信することを許可する",
   "goToSettings": "設定に移動する"
