--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -128,7 +128,7 @@
   "shareReview": "Share review",
   "yourReview": "Your review",
   "editReview": "Edit review",
-  "allReview": "All reviews",
+  "allReviews": "All reviews",
   "downloadDappToReview": "Something went wrong, did you not download/open dApp before posting review?",
   "reviewPosted": "Review posted.",
   "ratingsAndReviews": "Ratings and Reviews",
