updated translations and fixed minor padding issues

--- a/lib/localization/app_de.arb
+++ b/lib/localization/app_de.arb
@@ -6,7 +6,7 @@
   },
   "htcDappStore": "HTC DAPP STORE",
   "exploreTheBestDapps": "Die besten dApps erkunden",
-  "createdByCommunity": "Erstellt von der Community.",
+  "createdByCommunity": "erstellt von der Web3-Community.",
   "connectWallet": "Wallet verbinden",
   "featuredDapps": "FEATURED DAPPS",
   "exploreMore": "Mehr Kategorien und beliebte dApps erkunden",
@@ -77,9 +77,11 @@
   "savedPwa": "Gespeicherte dApps",
   "noDappsSaved": "Keine dApps gespeichert",
   "dappsReadyToUpdate": "dApps sind bereit für ein Update.",
+  "dappReadyToUpdate": "Die dApp ist bereit für ein Update.",
   "updateYourDapps": "Aktualisieren Sie Ihre dApps, um alle neuesten Funktionen zu nutzen.",
   "youHave": "Sie haben",
   "webDapps": "Web dApps",
+  "webDapp": "web dApp",
   "manageDapps": "dApps verwalten",
   "installedDapps": "Installierte",
   "pwas": "PWAs",
