--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -6,7 +6,7 @@
   },
   "htcDappStore": "HTC DAPP STORE",
   "exploreTheBestDapps": "Explore the best dApps",
-  "createdByCommunity": "created by community.",
+  "createdByCommunity": "created by the web3 community.",
   "connectWallet": "Connect Wallet",
   "featuredDapps": "FEATURED DAPPS",
   "exploreMore": "Explore more category and top dapps",
@@ -77,9 +77,11 @@
   "savedPwa": "Saved dApps",
   "noDappsSaved": "No dApps saved",
   "dappsReadyToUpdate": "dApps are ready to update.",
+  "dappReadyToUpdate": "dApp is ready to update.",
   "updateYourDapps": "Update your dApps to enjoy all the latest features.",
   "youHave": "You Have",
   "webDapps": "web dApps",
+  "webDapp": "web dApp",
   "manageDapps": "Manage dApps",
   "installedDapps": "Installed",
   "pwas": "PWAs",
