--- a/lib/localization/app_es.arb
+++ b/lib/localization/app_es.arb
@@ -6,7 +6,7 @@
   },
   "htcDappStore": "HTC TIENDA DE DAPP",
   "exploreTheBestDapps": "Explora las mejores dApps",
-  "createdByCommunity": "creada por la comunidad.",
+  "createdByCommunity": "creado por la comunidad web3.",
   "connectWallet": "Conectar Billetera",
   "featuredDapps": "DAPPS DESTACADAS",
   "exploreMore": "Explora más categorías y dApps principales",
@@ -77,9 +77,11 @@
   "savedPwa": "dApps Guardadas",
   "noDappsSaved": "No hay dApps guardadas",
   "dappsReadyToUpdate": "Las dApps están listas para actualizar.",
+  "dappReadyToUpdate": "La dApp está lista para ser actualizada.",
   "updateYourDapps": "Actualiza tus dApps para disfrutar de todas las características más recientes.",
   "youHave": "Tienes",
   "webDapps": "dApps web",
+  "webDapp": "dApp web",
   "manageDapps": "Administrar dApps",
   "installedDapps": "Instaladas",
   "pwas": "PWAs",
