--- a/lib/localization/app_fr.arb
+++ b/lib/localization/app_fr.arb
@@ -6,7 +6,7 @@
   },
   "htcDappStore": "HTC DAPP STORE",
   "exploreTheBestDapps": "Explorez les meilleures dApps",
-  "createdByCommunity": "créées par la communauté.",
+  "createdByCommunity": "créé par la communauté Web3.",
   "connectWallet": "Connecter le portefeuille",
   "featuredDapps": "DAPPS RECOMMANDÉES",
   "exploreMore": "Explorez plus de catégories et les meilleures dApps",
@@ -77,9 +77,11 @@
   "savedPwa": "Apps enregistrées",
   "noDappsSaved": "Aucune app enregistrée",
   "dappsReadyToUpdate": "Les apps sont prêtes à être mises à jour.",
+  "dappReadyToUpdate": "La dApp est prête à être mise à jour.",
   "updateYourDapps": "Mettez à jour vos apps pour profiter de toutes les dernières fonctionnalités.",
   "youHave": "Vous avez",
   "webDapps": "Apps web",
+  "webDapp": "App web",
   "manageDapps": "Gérer les apps",
   "installedDapps": "Installées",
   "pwas": "PWAs",
