--- a/lib/localization/app_it.arb
+++ b/lib/localization/app_it.arb
@@ -6,7 +6,7 @@
   },
   "htcDappStore": "HTC DAPP STORE",
   "exploreTheBestDapps": "Esplora le migliori dApps",
-  "createdByCommunity": "Creato dalla community.",
+  "createdByCommunity": "creato dalla comunità web3.",
   "connectWallet": "Connetti Wallet",
   "featuredDapps": "DAPPS IN EVIDENZA",
   "exploreMore": "Esplora altre categorie e dApps popolari",
@@ -77,9 +77,11 @@
   "savedPwa": "dApp Salvate",
   "noDappsSaved": "Nessuna dApp salvata",
   "dappsReadyToUpdate": "dApps sono pronte per l'aggiornamento.",
+  "dappReadyToUpdate": "La dApp è pronta per l'aggiornamento.",
   "updateYourDapps": "Aggiorna le tue dApps per godere di tutte le ultime funzionalità.",
   "youHave": "Hai",
   "webDapps": "dApp Web",
+  "webDapp": "dApp Web",
   "manageDapps": "Gestisci dApps",
   "installedDapps": "Installate",
   "pwas": "PWAs",
