--- a/lib/localization/app_ja.arb
+++ b/lib/localization/app_ja.arb
@@ -6,7 +6,7 @@
   },
   "htcDappStore": "HTC DAPP ストア",
   "exploreTheBestDapps": "最高のdAppsを探索する",
-  "createdByCommunity": "コミュニティによって作成されました。",
+  "createdByCommunity": "Web3コミュニティによって作成されました。",
   "connectWallet": "ウォレットに接続",
   "featuredDapps": "注目のdApps",
   "exploreMore": "さらにカテゴリを探索し、人気のあるdAppsを見る",
@@ -77,9 +77,11 @@
   "savedPwa": "保存されたdApps",
   "noDappsSaved": "保存されたdAppはありません",
   "dappsReadyToUpdate": "dAppsのアップデートが準備されています",
+  "dappReadyToUpdate": "dApp のアップデートが準備できました。",
   "updateYourDapps": "最新の機能を楽しむためにdAppsをアップデートしてください",
   "youHave": "所有数",
   "webDapps": "Web dApps",
+  "webDapp": "Web dApp",
   "manageDapps": "dAppsの管理",
   "installedDapps": "インストール済み",
   "pwas": "PWAs",
