--- a/lib/localization/app_ko.arb
+++ b/lib/localization/app_ko.arb
@@ -6,7 +6,7 @@
   },
   "htcDappStore": "HTC DAPP 스토어",
   "exploreTheBestDapps": "최고의 dApps를 탐색하세요",
-  "createdByCommunity": "커뮤니티에 의해 생성되었습니다.",
+  "createdByCommunity": "웹3 커뮤니티에서 만들어졌습니다.",
   "connectWallet": "지갑 연결",
   "featuredDapps": "추천 dApps",
   "exploreMore": "더 많은 카테고리를 탐색하고 인기있는 dApps를 보세요",
@@ -77,9 +77,11 @@
   "savedPwa": "저장된 dApps",
   "noDappsSaved": "저장된 dApp이 없습니다",
   "dappsReadyToUpdate": "dApps 업데이트가 준비되었습니다",
+  "dappReadyToUpdate": "dApp이 업데이트 준비가 되었습니다.",
   "updateYourDapps": "최신 기능을 즐기려면 dApps를 업데이트하세요",
   "youHave": "소유한 dApps 수",
   "webDapps": "웹 dApps",
+  "webDapp": "웹 dApp",
   "manageDapps": "dApps 관리",
   "installedDapps": "설치된 dApps",
   "pwas": "PWAs",
