--- a/lib/localization/app_pl.arb
+++ b/lib/localization/app_pl.arb
@@ -6,7 +6,7 @@
   },
   "htcDappStore": "HTC Sklep DAPP",
   "exploreTheBestDapps": "Odkryj najlepsze dAppy",
-  "createdByCommunity": "Utworzone przez społeczność",
+  "createdByCommunity": "stworzone przez społeczność Web3.",
   "connectWallet": "Podłącz portfel",
   "featuredDapps": "Polecane dAppy",
   "exploreMore": "Odkryj więcej kategorii i popularnych dAppów",
@@ -77,9 +77,11 @@
   "savedPwa": "Zapisane dApp",
   "noDappsSaved": "Brak zapisanych dApp",
   "dappsReadyToUpdate": "dApp gotowe do aktualizacji",
+  "dappReadyToUpdate": "dApp jest gotowa do aktualizacji.",
   "updateYourDapps": "Aby korzystać z najnowszych funkcji, zaktualizuj swoje dApp",
   "youHave": "Posiadasz",
   "webDapps": "dApp sieci Web",
+  "webDapp": "dApp sieci Web",
   "manageDapps": "Zarządzaj dApp",
   "installedDapps": "Zainstalowane dApp",
   "pwas": "PWAs",
