--- a/lib/localization/app_ru.arb
+++ b/lib/localization/app_ru.arb
@@ -6,7 +6,7 @@
   },
   "htcDappStore": "HTC DAPP МАГАЗИН",
   "exploreTheBestDapps": "Исследуйте лучшие dApps",
-  "createdByCommunity": "создано сообществом.",
+  "createdByCommunity": "создано сообществом web3.",
   "connectWallet": "Подключить кошелек",
   "featuredDapps": "РЕКОМЕНДУЕМЫЕ DAPPS",
   "exploreMore": "Исследуйте больше категорий и лучших dapps",
@@ -77,9 +77,11 @@
   "savedPwa": "Сохраненные dApp",
   "noDappsSaved": "Нет сохраненных dApp",
   "dappsReadyToUpdate": "dApp готовы к обновлению",
+  "dappReadyToUpdate": "dApp готово к обновлению.",
   "updateYourDapps": "Чтобы использовать последние функции, обновите свои dApp",
   "youHave": "У вас есть",
   "webDapps": "dApp веб-сайтов",
+  "webDapp": "dApp веб-сайтов",
   "manageDapps": "Управление dApp",
   "installedDapps": "Установленные dApp",
   "pwas": "PWAs",
