--- a/lib/localization/app_zh.arb
+++ b/lib/localization/app_zh.arb
@@ -6,7 +6,7 @@
   },
   "htcDappStore": "HTC DAPP 商店",
   "exploreTheBestDapps": "探索最佳 dApps",
-  "createdByCommunity": "由社区创建。",
+  "createdByCommunity": "由Web3社区创建。",
   "connectWallet": "连接钱包",
   "featuredDapps": "特色 dApps",
   "exploreMore": "探索更多分类和热门 dapps",
@@ -77,9 +77,11 @@
   "savedPwa": "保存的 dApp",
   "noDappsSaved": "没有保存的 dApp",
   "dappsReadyToUpdate": "dApp 准备更新",
+  "dappReadyToUpdate": "dApp 已准备好更新。",
   "updateYourDapps": "更新您的 dApp 以使用最新功能",
   "youHave": "您有",
   "webDapps": "Web dApp",
+  "webDapp": "Web dApp",
   "manageDapps": "管理 dApp",
   "installedDapps": "已安装的 dApp",
   "pwas": "PWA",
