--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -138,5 +138,6 @@
   "allowAppInstallDesc": "Allow dappstore to install apps on this device",
   "allowAppNotification": "Allow notifications permission",
   "allowAppNotificationDesc": "Allow dappstore to send notification on this device",
-  "goToSettings": "Go to settings"
+  "goToSettings": "Go to settings",
+  "selectNetwork": "Select Network"
 }
