--- a/lib/localization/app_es.arb
+++ b/lib/localization/app_es.arb
@@ -138,5 +138,6 @@
   "allowAppInstallDesc": "Permitir que dappstore instale aplicaciones en este dispositivo",
   "allowAppNotification": "Permitir permiso de notificaciones",
   "allowAppNotificationDesc": "Permitir que dappstore envíe notificaciones en este dispositivo",
-  "goToSettings": "Ir a ajustes"
+  "goToSettings": "Ir a ajustes",
+  "selectNetwork": "Seleccionar red"
 }
