--- a/lib/localization/app_it.arb
+++ b/lib/localization/app_it.arb
@@ -138,5 +138,6 @@
   "allowAppInstallDesc": "Consenti a dappstore di installare app su questo dispositivo",
   "allowAppNotification": "Consenti autorizzazione alle notifiche",
   "allowAppNotificationDesc": "Consenti a dappstore di inviare notifiche su questo dispositivo",
-  "goToSettings": "Vai alle impostazioni"
+  "goToSettings": "Vai alle impostazioni",
+  "selectNetwork": "Seleziona la rete"
 }
