--- a/lib/localization/app_ja.arb
+++ b/lib/localization/app_ja.arb
@@ -138,5 +138,6 @@
   "allowAppInstallDesc": "このデバイスに対してdappstoreにアプリのインストールを許可する",
   "allowAppNotification": "通知の許可",
   "allowAppNotificationDesc": "このデバイスに対してdappstoreが通知を送信することを許可する",
-  "goToSettings": "設定に移動する"
+  "goToSettings": "設定に移動する",
+  "selectNetwork": "ネットワークを選択"
 }
