--- a/lib/localization/app_ko.arb
+++ b/lib/localization/app_ko.arb
@@ -138,5 +138,6 @@
   "allowAppInstallDesc": "이 장치에 dappstore가 앱을 설치할 수 있도록 허용합니다",
   "allowAppNotification": "알림 권한 허용",
   "allowAppNotificationDesc": "이 장치에 dappstore가 알림을 보낼 수 있도록 허용합니다",
-  "goToSettings": "설정으로 이동"
+  "goToSettings": "설정으로 이동",
+  "selectNetwork": "네트워크 선택"
 }
