ready for opensource

--- a/lib/localization/app_de.arb
+++ b/lib/localization/app_de.arb
@@ -4,7 +4,7 @@
   "@helloWorld": {
     "description": "Hallo Welt"
   },
-  "htcDappStore": "HTC DAPP STORE",
+  "slickStore": "Slick Store",
   "exploreTheBestDapps": "Die besten dApps erkunden",
   "createdByCommunity": "erstellt von der Web3-Community.",
   "connectWallet": "Wallet verbinden",
@@ -49,10 +49,10 @@
   "categories": "Kategorien",
   "explore": "Erkunden",
   "all": "Alle",
-  "signUpTo": "Registrieren Sie sich bei HTC Store",
+  "signUpTo": "Registrieren Sie sich bei Slick Store",
   "useWalletConnect": "Wallet Connect verwenden",
   "dontHaveAWallet": "Sie haben kein Wallet? Erstellen Sie eins",
-  "viveWallet": "Vive Wallet",
+  "slickWallet": "Slick Wallet",
   "byContinuing": "Durch die Fortsetzung akzeptieren Sie die",
   "and": "und",
   "connectWith": "Verbinden mit",
@@ -72,7 +72,7 @@
   "remove": "Entfernen",
   "showMore": "Mehr anzeigen",
   "showLess": "Weniger anzeigen",
-  "welcomeToHTC": "Willkommen im HTC dApp Store",
+  "welcomeToSlick": "Willkommen im Slick Store",
   "signMessage": "Nachricht signieren",
   "savedPwa": "Gespeicherte dApps",
   "noDappsSaved": "Keine dApps gespeichert",
