--- a/lib/localization/app_es.arb
+++ b/lib/localization/app_es.arb
@@ -4,7 +4,7 @@
   "@helloWorld": {
     "description": "Hola mundo"
   },
-  "htcDappStore": "HTC TIENDA DE DAPP",
+  "slickStore": "Slick Store",
   "exploreTheBestDapps": "Explora las mejores dApps",
   "createdByCommunity": "creado por la comunidad web3.",
   "connectWallet": "Conectar Billetera",
@@ -49,11 +49,11 @@
   "categories": "Categorías",
   "explore": "Explorar",
   "all": "Todo",
-  "signUpTo": "Registrarse en HTC Store",
+  "signUpTo": "Registrarse en Slick Store",
   "useWalletConnect": "Usar Wallet Connect",
   "dontHaveAWallet": "¿No tienes una billetera? Crea una",
-  "viveWallet": "Vive Wallet",
-  "byContinuing": "Al continuar, aceptas los términos y condiciones de HTC dApp Store",
+  "slickWallet": "Slick Wallet",
+  "byContinuing": "Al continuar, aceptas los términos y condiciones de Slick Store",
   "and": "y",
   "connectWith": "Conectar con",
   "firstName": "Nombre",
@@ -72,7 +72,7 @@
   "remove": "Eliminar",
   "showMore": "Mostrar más",
   "showLess": "Mostrar menos",
-  "welcomeToHTC": "Bienvenido a HTC dApp Store",
+  "welcomeToSlick": "Bienvenido a Slick Store",
   "signMessage": "Firmar Mensaje",
   "savedPwa": "dApps Guardadas",
   "noDappsSaved": "No hay dApps guardadas",
