--- a/lib/localization/app_fr.arb
+++ b/lib/localization/app_fr.arb
@@ -4,7 +4,7 @@
   "@helloWorld": {
     "description": "Bonjour le monde"
   },
-  "htcDappStore": "HTC DAPP STORE",
+  "slickStore": "Slick Store",
   "exploreTheBestDapps": "Explorez les meilleures dApps",
   "createdByCommunity": "créé par la communauté Web3.",
   "connectWallet": "Connecter le portefeuille",
@@ -49,10 +49,10 @@
   "categories": "Catégories",
   "explore": "Explorer",
   "all": "Tout",
-  "signUpTo": "Inscrivez-vous sur le HTC Store",
+  "signUpTo": "Inscrivez-vous à Slick Store",
   "useWalletConnect": "Utiliser Wallet Connect",
   "dontHaveAWallet": "Vous n'avez pas de portefeuille ? Créez un",
-  "viveWallet": "Vive Wallet",
+  "slickWallet": "Slick Wallet",
   "byContinuing": "En continuant, vous acceptez les",
   "and": "et",
   "connectWith": "Se connecter avec",
@@ -72,7 +72,7 @@
   "remove": "Supprimer",
   "showMore": "Afficher plus",
   "showLess": "Afficher moins",
-  "welcomeToHTC": "Bienvenue dans la boutique d'apps HTC",
+  "welcomeToSlick": "Bienvenue dans la BOUTIQUE SLICK",
   "signMessage": "Signer un message",
   "savedPwa": "Apps enregistrées",
   "noDappsSaved": "Aucune app enregistrée",
