--- a/lib/localization/app_it.arb
+++ b/lib/localization/app_it.arb
@@ -4,7 +4,7 @@
   "@helloWorld": {
     "description": "Ciao Mondo"
   },
-  "htcDappStore": "HTC DAPP STORE",
+  "slickStore": "Slick Store",
   "exploreTheBestDapps": "Esplora le migliori dApps",
   "createdByCommunity": "creato dalla comunità web3.",
   "connectWallet": "Connetti Wallet",
@@ -49,10 +49,10 @@
   "categories": "Categorie",
   "explore": "Esplora",
   "all": "Tutti",
-  "signUpTo": "Registrati su HTC Store",
+  "signUpTo": "Iscriviti a Slick Store",
   "useWalletConnect": "Usa Wallet Connect",
   "dontHaveAWallet": "Non hai un wallet? Creane uno",
-  "viveWallet": "Vive Wallet",
+  "slickWallet": "Slick Wallet",
   "byContinuing": "Continuando accetti i",
   "and": "e",
   "connectWith": "Connetti con",
@@ -72,7 +72,7 @@
   "remove": "Rimuovi",
   "showMore": "Mostra di più",
   "showLess": "Mostra di meno",
-  "welcomeToHTC": "Benvenuto nell'HTC dApp Store",
+  "welcomeToSlick": "Benvenuto nell'Slick Store",
   "signMessage": "Firma Messaggio",
   "savedPwa": "dApp Salvate",
   "noDappsSaved": "Nessuna dApp salvata",
