--- a/lib/localization/app_ja.arb
+++ b/lib/localization/app_ja.arb
@@ -4,7 +4,7 @@
   "@helloWorld": {
     "description": "こんにちは世界"
   },
-  "htcDappStore": "HTC DAPP ストア",
+  "slickStore": "Slick ストア",
   "exploreTheBestDapps": "最高のdAppsを探索する",
   "createdByCommunity": "Web3コミュニティによって作成されました。",
   "connectWallet": "ウォレットに接続",
@@ -49,10 +49,10 @@
   "categories": "カテゴリ",
   "explore": "探索",
   "all": "すべて",
-  "signUpTo": "HTCストアに登録",
+  "signUpTo": "Slick Storeに登録する",
   "useWalletConnect": "Wallet Connectを使用",
   "dontHaveAWallet": "ウォレットをお持ちでないですか？ 作成する",
-  "viveWallet": "Vive ウォレット",
+  "slickWallet": "Slick ウォレット",
   "byContinuing": "続行することで、",
   "and": "および",
   "connectWith": "接続する",
@@ -72,7 +72,7 @@
   "remove": "削除",
   "showMore": "もっと表示",
   "showLess": "表示を減らす",
-  "welcomeToHTC": "HTC dAppストアへようこそ",
+  "welcomeToSlick": "Slickストアへようこそ",
   "signMessage": "メッセージに署名",
   "savedPwa": "保存されたdApps",
   "noDappsSaved": "保存されたdAppはありません",
