--- a/lib/localization/app_ko.arb
+++ b/lib/localization/app_ko.arb
@@ -4,7 +4,7 @@
   "@helloWorld": {
     "description": "안녕하세요 세계"
   },
-  "htcDappStore": "HTC DAPP 스토어",
+  "slickStore": "Slick 스토어",
   "exploreTheBestDapps": "최고의 dApps를 탐색하세요",
   "createdByCommunity": "웹3 커뮤니티에서 만들어졌습니다.",
   "connectWallet": "지갑 연결",
@@ -49,10 +49,10 @@
   "categories": "카테고리",
   "explore": "탐색",
   "all": "모두",
-  "signUpTo": "HTC 스토어 가입",
+  "signUpTo": "Slick Store에 가입하기",
   "useWalletConnect": "Wallet Connect 사용",
   "dontHaveAWallet": "지갑이 없으신가요? 만들기",
-  "viveWallet": "Vive 지갑",
+  "slickWallet": "Slick 지갑",
   "byContinuing": "계속 진행함으로써,",
   "and": "및",
   "connectWith": "연결",
@@ -72,7 +72,7 @@
   "remove": "제거",
   "showMore": "더 보기",
   "showLess": "간략히 보기",
-  "welcomeToHTC": "HTC dApp 스토어에 오신 것을 환영합니다",
+  "welcomeToSlick": "Slick 스토어에 오신 것을 환영합니다",
   "signMessage": "메시지 서명",
   "savedPwa": "저장된 dApps",
   "noDappsSaved": "저장된 dApp이 없습니다",
