--- a/lib/localization/app_pl.arb
+++ b/lib/localization/app_pl.arb
@@ -4,7 +4,7 @@
   "@helloWorld": {
     "description": "Witaj świecie"
   },
-  "htcDappStore": "HTC Sklep DAPP",
+  "slickStore": "Slick Store",
   "exploreTheBestDapps": "Odkryj najlepsze dAppy",
   "createdByCommunity": "stworzone przez społeczność Web3.",
   "connectWallet": "Podłącz portfel",
@@ -49,10 +49,10 @@
   "categories": "Kategorie",
   "explore": "Odkrywaj",
   "all": "Wszystko",
-  "signUpTo": "Zarejestruj się w HTC Sklep",
+  "signUpTo": "Zarejestruj się w Slick Store",
   "useWalletConnect": "Użyj Wallet Connect",
   "dontHaveAWallet": "Nie masz portfela? Utwórz",
-  "viveWallet": "Portfel Vive",
+  "slickWallet": "Portfel Slick",
   "byContinuing": "Kontynuując,",
   "and": "i",
   "connectWith": "Połącz z",
@@ -72,7 +72,7 @@
   "remove": "Usuń",
   "showMore": "Pokaż więcej",
   "showLess": "Pokaż mniej",
-  "welcomeToHTC": "Witaj w sklepie dApp HTC",
+  "welcomeToSlick": "Witamy w SKLEPIE SLICK",
   "signMessage": "Podpisz wiadomość",
   "savedPwa": "Zapisane dApp",
   "noDappsSaved": "Brak zapisanych dApp",
