--- a/lib/localization/app_ru.arb
+++ b/lib/localization/app_ru.arb
@@ -4,7 +4,7 @@
   "@helloWorld": {
     "description": "Привет, мир"
   },
-  "htcDappStore": "HTC DAPP МАГАЗИН",
+  "slickStore": "Slick МАГАЗИН",
   "exploreTheBestDapps": "Исследуйте лучшие dApps",
   "createdByCommunity": "создано сообществом web3.",
   "connectWallet": "Подключить кошелек",
@@ -49,10 +49,10 @@
   "categories": "Категории",
   "explore": "Исследовать",
   "all": "Все",
-  "signUpTo": "Зарегистрируйтесь в HTC Store",
+  "signUpTo": "Зарегистрируйтесь на Slick Store",
   "useWalletConnect": "Используйте Wallet Connect",
   "dontHaveAWallet": "Нет кошелька? Создайте",
-  "viveWallet": "Vive Wallet",
+  "slickWallet": "Slick Wallet",
   "byContinuing": "Продолжая, вы соглашаетесь",
   "and": "и",
   "connectWith": "Подключиться с",
@@ -72,7 +72,7 @@
   "remove": "Удалить",
   "showMore": "Показать еще",
   "showLess": "Показать меньше",
-  "welcomeToHTC": "Добро пожаловать в магазин dApp HTC",
+  "welcomeToSlick": "Добро пожаловать в МАГАЗИН SLICK",
   "signMessage": "Подписать сообщение",
   "savedPwa": "Сохраненные dApp",
   "noDappsSaved": "Нет сохраненных dApp",
