--- a/lib/localization/app_zh.arb
+++ b/lib/localization/app_zh.arb
@@ -4,7 +4,7 @@
   "@helloWorld": {
     "description": "你好，世界"
   },
-  "htcDappStore": "HTC DAPP 商店",
+  "slickStore": "Slick 商店",
   "exploreTheBestDapps": "探索最佳 dApps",
   "createdByCommunity": "由Web3社区创建。",
   "connectWallet": "连接钱包",
@@ -49,11 +49,11 @@
   "categories": "分类",
   "explore": "探索",
   "all": "全部",
-  "signUpTo": "注册 HTC 商店",
+  "signUpTo": "在Slick Store注册",
   "useWalletConnect": "使用钱包连接",
   "dontHaveAWallet": "还没有钱包? 创建一个",
-  "viveWallet": "Vive 钱包",
-  "byContinuing": "继续即表示您同意 HTC dApp 商店的",
+  "slickWallet": "Slick 钱包",
+  "byContinuing": "继续即表示您同意 Slick 商店的",
   "and": "和",
   "connectWith": "连接方式",
   "firstName": "名字",
@@ -72,7 +72,7 @@
   "remove": "移除",
   "showMore": "显示更多",
   "showLess": "显示更少",
-  "welcomeToHTC": "欢迎来到 HTC dApp 商店",
+  "welcomeToSlick": "欢迎来到 Slick 商店",
   "signMessage": "签名消息",
   "savedPwa": "保存的 dApp",
   "noDappsSaved": "没有保存的 dApp",
