--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -4,7 +4,7 @@
   "@helloWorld": {
     "description": "Hello world"
   },
-  "htcDappStore": "HTC DAPP STORE",
+  "slickStore": "Slick Store",
   "exploreTheBestDapps": "Explore the best dApps",
   "createdByCommunity": "created by the web3 community.",
   "connectWallet": "Connect Wallet",
@@ -49,11 +49,11 @@
   "categories": "Categories",
   "explore": "Explore",
   "all": "All",
-  "signUpTo": "Sign up to HTC Store",
+  "signUpTo": "Sign up to Slick Store",
   "useWalletConnect": "Use Wallet Connect",
   "dontHaveAWallet": "Don’t have a wallet? Create a",
-  "viveWallet": "Vive Wallet",
-  "byContinuing": "By continuing you agree to HTC dApp Store’s",
+  "slickWallet": "Slick Wallet",
+  "byContinuing": "By continuing you agree to Slick Store’s",
   "and": "and",
   "connectWith": "Connect with",
   "firstName": "First Name",
@@ -72,7 +72,7 @@
   "remove": "Remove",
   "showMore": "Show more",
   "showLess": "Show less",
-  "welcomeToHTC": "Welcome to HTC dApp Store",
+  "welcomeToSlick": "Welcome to Slick Store",
   "signMessage": "Sign Message",
   "savedPwa": "Saved dApps",
   "noDappsSaved": "No dApps saved",
